--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 asgiref==3.6.0
+dj-database-url==1.2.0
 Django==4.1.6
+django-environ==0.9.0
 django_debug_toolbar==3.8.1
+psycopg2==2.9.5
 sqlparse==0.4.3
